# Portfolio

./: .env.example  .gitignore  Cargo.toml  README.md  Trunk.toml
portfolio-app/: Cargo.toml  index.html
portfolio-app/src/: lib.rs
portfolio-app/src/bootstrap/: mod.rs
portfolio-app/src/components/: footer.rs  header.rs  mod.rs  profile.rs  top.rs
portfolio-app/src/page/: about.rs  home.rs
portfolio-app/src/router/: mod.rs
portfolio-core/: Cargo.toml
portfolio-core/src/model/: mod.rs  status.rs  user.rs
portfolio-services/: Cargo.toml
portfolio-services/src/api/: requests.rs
portfolio-services/src/usecase/: user.rs
