[package]
name = "portfolio-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# private crate
portfolio-core = { path = "../portfolio-core" }
portfolio-services = { path = "../portfolio-services" }

# yew crate
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# wasm crate
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.3"
wasm-logger = "0.2"

# json crate
serde = { version = "1.0.37", features = ["derive"] }
serde_json = "1.0.81"

instant = { version = "0.1", features = ["wasm-bindgen"] }
dotenv_codegen = "0.15.0"
log = "0.4"
