[package]
name = "portfolio-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.37", features = ["derive"] }
serde_json = "1.0.81"
derive-new = "0.5.9"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.3"
wasm-logger = "0.2"
