[package]
name = "portfolio-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# private crate
portfolio-core = { path = "../portfolio-core" }

# wasm crate
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.3"
wasm-logger = "0.2"

# JavaScript crate
js-sys = "0.3.60"
web-sys = "0.3.58"

# other
log = "0.4"
dotenv_codegen = "0.15.0"
gloo = "0.10"
serde = { version = "1.0.37", features = ["derive"] }
serde_json = "1.0.81"
derive-new = "0.5.9"
